--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "test"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.2.0"
+    "@openzeppelin/contracts": "^3.2.0",
+    "dotenv": "^8.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.5.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
